# rod

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci_cd.yml  style.yml
src/rod/: __init__.py  __main__.py  common.py  element.py  link.py  logging.py  model.py  physics.py  pretty_printer.py  sdf.py  world.py
src/rod/builder/: primitive_builder.py  primitives.py
src/rod/kinematics/: __init__.py  kinematic_tree.py  tree_transforms.py
src/rod/sdf/: collision.py  common.py  element.py  geometry.py  joint.py  link.py  material.py  model.py  physics.py  scene.py  sdf.py  visual.py  world.py
src/rod/tree/: __init__.py  directed_tree.py  tree_elements.py
src/rod/urdf/: exporter.py
src/rod/utils/: frame_convention.py  gazebo.py  resolve_frames.py  resolve_uris.py
tests/: test_meshbuilder.py  test_urdf_exporter.py  test_urdf_parsing.py  utils_models.py
