[build-system]
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.cibuildwheel]
build-frontend = "build"


# ==================
# Ruff configuration
# ==================

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    ".devcontainer",
    "__pycache__",
]
preview = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "E",
    "F",
    "I",
    "W",
    "RUF",
    "UP",
    "YTT",
]

ignore = [
    "B008", # Function call in default argument
    "B024", # Abstract base class without abstract methods
    "E402", # Module level import not at top of file
    "E501", # Line too long
    "E731", # Do not assign a `lambda` expression, use a `def`
    "E741", # Ambiguous variable name
    "I001", # Import block is unsorted or unformatted
    "RUF003", # Ambigous unicode character in comment
]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F821"]
