[metadata]
name = rod
description = The ultimate Python tool for RObot Descriptions processing.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = diego.ferigo@iit.it
license = BSD
license_files = LICENSE
platforms = any
url = https://github.com/ami-iit/rod

project_urls =
    Changelog = https://github.com/ami-iit/rod/releases
    Source = https://github.com/ami-iit/rod
    Tracker = https://github.com/ami-iit/rod/issues

keywords =
    description
    gazebo
    parser
    robot
    robotics
    ros
    sdf
    sdformat
    simulator
    simulation
    urdf

classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Robot Framework
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment :: Simulation

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    coloredlogs
    mashumaro
    numpy
    packaging
    pptree
    scipy
    xmltodict

[options.extras_require]
style =
    black
    isort
all =
    %(style)s

[options.packages.find]
where = src
